[package]
name = "mdbook-external-links"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = "4.1.1"
mdbook = "0.4.25"
pulldown-cmark = "0.9.2"
pulldown-cmark-to-cmark = "10.0.4"
semver = "1.0.16"
serde_json = "1.0.91"
