[package]
name = "mdbook-external-links"
description = "Open external links inside your mdBooks in a different tab"
keywords = [
  "mdbook",
  "mdbook-external-links",
  "mdbook-plugin",
  "mdbook-preprocessor",
]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/jonahgoldwastaken/mdbook-external-links"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = "4.1.1"
mdbook = "0.4.25"
pulldown-cmark = "0.9.2"
pulldown-cmark-to-cmark = "10.0.4"
semver = "1.0.16"
serde_json = "1.0.91"
